# zebra-label-gateway

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  LICENSE  PRODUCT.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  retailer_profile_request.md
.github/workflows/: tests.yml
.impeccable/live/: config.json
config/: default.yaml  profiles.yaml
deploy/: Caddyfile  tailscale-serve.json
docs/: architecture.md  deploy-linux-tailscale.md  desktop-installer.md  ios-shortcut.md  label-normalization.md  plugins.md  printer-setup.md  project-charter.md  refactor-plan.md  retailer-profiles.md  tls-setup.md  zpl-output.md
packaging/: build.ps1  desktop.spec  installer.nsi
plugins/libreoffice/: Addons.xcu  build.py  description.xml
plugins/word/: manifest.xml
samples/: README.md
scripts/: bootstrap-project.ps1  calibrate-notes.md  install-dev.ps1  print-test-label.ps1  run-dev.ps1
src/zebra_label_gateway/: __init__.py  app.py  config.py  crop_detector.py  desktop.py  image_processor.py  input_detection.py  pdf_renderer.py  pipeline.py  print_label.py  print_tcp.py  printer_tcp.py  storage.py  (+4 more)
tests/: test_app.py  test_config.py  test_crop_detector.py  test_image_processor.py  test_input_detection.py  test_libreoffice_plugin.py  test_pdf_renderer.py  test_pipeline.py  test_profiles.py  test_storage.py  test_transport.py  test_watcher.py  test_web.py  test_webapp.py  test_zpl_encoder.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+43 files in other folders)
