[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "zebra-label-gateway"
version = "0.1.0"
description = "Local middleware for normalizing inconsistent shipping labels into reliable 4x6 ZPL output for Zebra printers."
requires-python = ">=3.11"
dependencies = [
    "pymupdf",
    "pillow",
    "pyyaml",
    "watchdog"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx"
]
windows = [
    "pywin32"
]
web = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart"
]

[project.scripts]
zebra-label-gateway = "zebra_label_gateway.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"zebra_label_gateway.webapp" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
